<resources>
    <string name="app_name">Taala Chaabi</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="power_off_feature_text">Power Off Detection</string>
    <string name="freinds_access_feature_text">Access from friends number</string>
    <string name="factory_reset_feature_text">Factory Reset</string>
    <string name="locate_me_feature_text">Locate Me</string>
    <string name="remotely_access_feature_text">Remotely Access Device</string>
    <string name="title_activity_no_landscape">NoLandscapeActivity</string>
    <string name="title_activity_login">Login</string>
    <string name="welcome_message_first">Welcome To</string>
    <string name="welcome_message_second">Taala - Chaabi</string>
    <string name="login_direction">Enter your 4 digit PIN</string>
    <string name="pin_hint">Enter 4 digit PIN here</string>
    <string name="made_text_first">Made with</string>
   <string name="made_text_part_second">in India</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_no_landscape_no_actionbar">NoLandscapeNOActionBarActivity</string>

    <!--Settings Activity String Name-->
    <string name="pin_change">Change PIN</string>
    <string name="friend_details">Edit friend details</string>
    <string name="customize_option">Customize</string>
    <string name="manage_sound_option">Manage Sound</string>
    <string name="use_option">How to use</string>
    <string name="title_activity_change_pin">ChangePinActivity</string>

    <!--Change Pin Activity Name-->
    <string name="current_pin_text">Enter your current PIN</string>
    <string name="new_pin_text">Enter new 4 digit PIN</string>
    <string name="confirm_new_pin_text">Confirm new 4 digit PIN</string>
    <string name="forgot_pin_text">Forgot my PIN</string>

    <!--SignUP activity Name-->
    <string name="confirm_pin_text">Confirm your 4 digit PIN</string>
    <string name="email_register_text">Register your mail ID</string>
    <string name="email_register_hint">abc@example.com</string>
    <!--Shared Prefs Screen name -->
    <string name="login_pin">preyvschaggol.pirates.ideafactory.preyvschaggol.loginPin</string>
    <string name="title_activity_sign_up">SignUP</string>
    <string name="title_activity_friend_details">Friends Detail</string>

    <!--Friend Details Screen -->
    <string name="friend_contact_description">Choose Contacts</string>
    <string name="added_friend_contact_description">Added Contacts</string>
</resources>
