<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">
    <LinearLayout

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/welcome_color"
            android:text="@string/welcome_message_first"
            android:textSize="@dimen/welcome_text_size"
            android:gravity="center"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/logo_welcome"
            android:gravity="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/welcome_color_second"
            android:text="@string/welcome_message_second"
            android:textSize="@dimen/welcome_text_size_second"
            android:gravity="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/background_dark"
            android:text="@string/login_direction"
            android:textSize="@dimen/login_directions"
            android:gravity="center"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:hint="@string/pin_hint"
            android:textSize="@dimen/welcome_text_size"
            android:gravity="center"
            android:id="@+id/pinText"
            />

        <ImageButton
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:background="@drawable/login_button"
            android:layout_gravity="center_horizontal"
            android:id="@+id/login_button"/>





    </LinearLayout>

    <LinearLayout

        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/welcome_color"
        android:text="@string/made_text_first"
        android:textSize="@dimen/welcome_text_size"
        />
    <ImageView
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:background="@drawable/made_in_india"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/welcome_color"
            android:text="@string/made_text_part_second"
            android:textSize="@dimen/welcome_text_size"
            />
    </LinearLayout>

</RelativeLayout>











