<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wooden_texture">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/background_light"
        android:text="@string/current_pin_text"
        android:textSize="@dimen/welcome_text_size"
        android:gravity="center"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:hint="@string/pin_hint"
        android:textSize="@dimen/welcome_text_size"
        android:gravity="center"
        android:id="@+id/currentPin"
        android:background="@drawable/text_box_pin_change"
        android:inputType="numberPassword"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/background_yellow"
        android:text="@string/forgot_pin_text"
        android:textSize="@dimen/welcome_text_size"
        android:gravity="right"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/background_light"
        android:text="@string/new_pin_text"
        android:textSize="@dimen/welcome_text_size"
        android:gravity="center"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:hint="@string/pin_hint"
        android:textSize="@dimen/welcome_text_size"
        android:gravity="center"
        android:id="@+id/newPin"
        android:background="@drawable/text_box_pin_change"
        android:inputType="numberPassword"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/background_light"
        android:text="@string/confirm_new_pin_text"
        android:textSize="@dimen/welcome_text_size"
        android:gravity="center"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:hint="@string/pin_hint"
        android:textSize="@dimen/welcome_text_size"
        android:gravity="center"
        android:id="@+id/confirmPin"
        android:background="@drawable/text_box_pin_change"
        android:inputType="numberPassword"
        />

    <ImageButton
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:background="@drawable/login_button"
        android:layout_gravity="center_horizontal"
        android:id="@+id/change_pin_button"/>

</LinearLayout>

